--- a/style.css
+++ b/style.css
@@ -5,13 +5,10 @@
 }
 body{
     background-color: #19a1ad;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    overflow: hidden;
 }
 #body{
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     height: 100vh;
